# 3D_Engine

./: CMakeLists.txt  README.md  main.cpp
include/: FG.h  Globals.h  Grid.h  Material.h  Mesh.h  Model.h  Orbital.h  Setup.h  Shader.h  Texture.h  Window.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fragmentShader.glsl  grid_fragment.glsl  modelfrag.glsl  modelvertex.glsl  vertexShader.glsl
src/: Mesh.cpp  Model.cpp  Orbital.cpp  Setup.cpp  Texture.cpp  image.cpp  image2.cpp  import.cpp  main.cpp  teste.cpp
